--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tsparticles/shape-heart": "^3.5.0",
+    "@tsparticles/vue3": "^3.0.1",
     "axios": "^1.7.7",
+    "tsparticles": "^3.5.0",
     "vue": "^3.5.11",
-    "vue-router": "^4.4.5",
-    "vue3-particles": "^2.12.0"
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
